What's New for PSPRadio
========================
0.38.12 (rxxxx) (2006-xx-xx)
NEW FEATURES
(sandberg) Core: Implemented a direct VRAM version of Danzeff for use in Links2.
(raf) Core: Now root of /PSP/MUSIC is also used in the local files screen. (It is shown as 'MUSIC')
BUG FIXES

0.38.11 (r1184) (2006-05-28)
NEW FEATURES
(raf) Added support for the new SHOUTcast DB Listing. This will retrieve now 500 stations by default. Look at the config file to change.
(raf) Dyn/Retawq: Updated priority to 45 so it will co-operate with pspradio better.
(sandberg) Core: Updated danzeff to support 90 degrees CW rotated keyboards.
(raf) Code: Started adding proxy support. Test it by enabling in the .cfg file.
BUG FIXES

0.38.10 (r1159)(2006-05-19)
NEW FEATURES
(raf) Core/(Links2): Updated/enhanced pthreads implementation.
(raf) Core/SHOUTcast: The SHOUTcast request string can now be specified in the configuration file.
(sandberg) Dyn/Core: -Prepared the plugin framework for game plugins.
(sandberg) Dyn/Retawq: -Modified Retawq plugin to use danzeff for inputs.
(raf) Dyn: If plugin load fails because of lack of memory, then the message displayed on the screen will say so.
(raf) Dyn/Code: Now PSPRadio allocates 6MB instead of 8MB or RAM. This to give more RAM to plugins.
(danzel) Core: Added lite version to danzeff library.
(sandberg) Core: Added GU version to danzeff library.
(raf) Dyn/Retawq: -Updated code to take advantage of changes to newlib (for pipes/file descriptors/sockets)
(raf) Dyn/Retawq: -Cleaned up the code to make it easier to update when a new version of retawq is available.
BUG FIXES
(raf) Calling network termination functions before exit -- hope this helps exit when using eLoader.
(raf) When a socket closed, writestring() would keep trying to send, and keep reporting errors, filling up the event queue, and causing pspradio to exit. Thanks PSP KEVIN for the report.

0.38.091 (r1029) (2006-04-06)
NEW FEATURES