@@ -25,10 +25,17 @@
 	PSP_MAIN_THREAD_NAME("PSPRadioPRX");
 	PSP_HEAP_SIZE_KB(6*1024);//4096);//8192);
 #else
+#ifdef DEVHOOK
+	PSP_MODULE_INFO("PSPRADIO", 0, 0, 1);
+	PSP_MAIN_THREAD_PARAMS(80, 128, PSP_THREAD_ATTR_USER);
+	PSP_MAIN_THREAD_NAME("PSPRadio");
+	PSP_HEAP_SIZE_KB(6*1024);
+#else
 	PSP_MODULE_INFO("PSPRADIO", 0x0, 0, 1); 	 
  	PSP_MAIN_THREAD_ATTR(THREAD_ATTR_USER);
 	PSP_MAIN_THREAD_PRIORITY(80);
 	PSP_MAIN_THREAD_STACK_SIZE_KB(128);
+#endif
 #endif
 
 CPSPRadio *gPSPRadio = NULL;
